[workspace]
members = ["crates/base", "crates/kptools"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[workspace.dependencies]
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
thiserror = "2"
byteorder = "1"
num-traits = "0.2"
tempfile = "3"
