[package]
name = "kptools"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kptools"
path = "src/main.rs"

[dependencies]
kptools-base = { path = "../base" }
bytemuck = { workspace = true }
byteorder = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
sha1 = "0.11"
sha2 = "0.11"
digest = "0.11"
flate2 = { version = "1", features = ["zlib-rs"] }
bzip2 = "0.6"
lz4 = "1"
lz4_flex = { version = "0.13", default-features = false, features = ["std"] }
lzma-rust2 = "0.16"
zstd = "0.13"

[dev-dependencies]
tempfile = { workspace = true }
